<resources>
    <string name="app_name">Nomoko</string>
    <string name="testDBQuestion">Question</string>
    <string name="notifTitre">De nouveaux défis sont disponibles !</string>
    <string name="notifTexte">Venez choisir un nouveau défi parmi les trois disponibles !</string>
    <string name="channel_name">ChannelChallenge</string>
    <string name="channel_description">oui</string>
    <string name="defireussi">Defi reussi</string>
    <string name="bienvenue"><b><font size="30">Bienvenue sur nomoko !</font> </b>\n
        La prochaine étape consiste à remplir un formulaire.
        Ça ne vous prendra que 10 minutes et permettra de vous construire un profil.
    </string>
    <string name="prenom">Prénom</string>
    <string name="avatar">Avatar</string>
    <string name="bouton">C\'est parti !</string>
    <string name="recompense">Vous pouvez maintenant créer votre récompense</string>
    <string name="description_recompense">Votre récompense est unique, c\'est vous qui décidez ! Choisissez bien, vous ne pourrez plus la modifier jusqu\'à
        ce qu\'elle soit débloquée.
    </string>
    <string name="editext_recompense">Créez votre récompense</string>
    <string name="bouton_suivant">Suivant</string>
    <string name="test_de_personnalite">Test de personnalité</string>
    <string name="personnaliteAnalyste">Analyste</string>
    <string name="personnaliteDiplomate">Diplomate</string>
    <string name="personnaliteSentinelle">Sentinelle</string>
    <string name="personnaliteExplorateur">Explorateur</string>
    <string name="notifparam">Activer/désactiver les notifications.</string>
    <string name="editableText">editable</string>
    <string name="dbCatEsprit">Esprit</string>
    <string name="dbCatEnergie">Énergie</string>
    <string name="dbCatNature">Nature</string>
    <string name="dbCatTactique">Tactique</string>
    <string name="dbQuest1">Vous présenter à d\'autres personnes ne vous pose aucun souci.</string>
    <string name="dbQuest2">Il vous arrive d\'ignorer votre environnement ou vos proches lorsque vous êtes perdus dans vos pensées.</string>
    <string name="dbQuest3">Vous n\'avez pas l\'habitude de lancer des conversations.</string>
    <string name="dbQuest4">Vous aimez entreprendre des activités par simple curiosité.</string>
    <string name="dbQuest5">Vous éprouvez souvent un sentiment de supériorité.</string>
    <string name="dbQuest6">Vous pensez qu\'une bonne organisation est plus importante que la flexibilité et l\'adaptabilité</string>
    <string name="dbQuest7">Vous seriez prêt à perdre un débat pour ne pas contrarier une personne.</string>
    <string name="dbQuest8">Être au centre de l\'attention ne vous gêne pas.</string>
    <string name="dbQuest9">Vous vous considérez plus pratique que créatif.</string>
    <string name="dbQuest10">Vous êtes rarement contrarié par les gens.</string>
    <string name="dbQuest11">Vous planifiez minutieusement vos voyages.</string>
    <string name="dbQuest12">Vous avez du mal à éprouver de l\'empathie pour les sentiments des autres.</string>
    <string name="dbQuest13">Vos périodes de travail suivent plus vos pics d\'énergie et de motivation qu\'un planning prédéfini.</string>
    <string name="dbQuest14">Il vous arrive souvent d\'être envieux(-se) des autres.</string>
    <string name="dbQuest15">Un livre ou un film de qualité sont souvent mieux qu\’une soirée mondaine.</string>
    <string name="dbQuest16">Concevoir un planning et s\'y tenir est la partie la plus importante d\'un projet..</string>
    <string name="dbQuest17">En tant que parent, vous préféreriez voir votre enfant devenir intelligent plutôt que gentil.</string>
    <string name="dbQuest18">Vous ne laissez pas d\'autres personnes influencer vos actions.</string>
    <string name="dbQuest19">Vous êtes plus du genre à improviser qu\’à tout planifier.</string>
    <string name="dbQuest20">Vous appréciez aller à des soirées déguisées ou de participer à des jeux de rôle.</string>
    <string name="dbQuest21">Vous réfléchissez souvent à la place de l\'être humain dans l\'univers.</string>
    <string name="dbQuest22">"La réflexion et le raisonnement sont généralement plus importante
que les sentiments lorsqu\’il s\’agit de prendre des décisions importantes."</string>
    <string name="dbQuest23">Vous pensez que les opinions de tous doivent être respectées, même si elles entrent en contradiction avec les faits..</string>
    <string name="dbQuest24">Vous perdez régulièrement vos affaires</string>
    <string name="dbQuest25">Vous vous considérez comme quelqu\'un d\'émotionnellement stable.</string>
    <string name="dbQuest26">Votre esprit regorge d\’idées et de plans à explorer.</string>
    <string name="dbQuest27">Vous vous considérez comme un rêveur / une rêveuse.</string>
    <string name="dbQuest28">Le plus souvent, vous vous fiez davantage à votre expérience qu\’à votre imagination.</string>
    <string name="dbQuest29">L\'avis des gens est très important à vos yeux.</string>
    <string name="dbQuest30">"Vous remettez souvent les choses à plus tard jusqu’à ce
qu\’il ne reste plus assez de temps pour tout faire."</string>
    <string name="dbQuest31">"Vous croyez qu\’il est plus gratifiant d\’être apprécié(e)
par les autres que d’être puissant(e)."</string>
    <string name="dbQuest32">Vous prenez souvent l\’initiative dans les situations sociales.</string>
    <string name="dbDefiNom1">Sobriété</string>
    <string name="dbDefiNom2">Homo ludens</string>
    <string name="dbDefiNom3">Quoi de mieux que sa famille ?</string>
    <string name="dbDefiNom4">Perdez vous dans un livre !</string>
    <string name="dbDefiNom5">C\'est l\'heure d\'être au calme</string>
    <string name="dbDefiNom6">Shakespeare</string>
    <string name="dbDefiNom7">Moi et ma nourriture</string>
    <string name="dbDefiNom8">Introspection</string>
    <string name="dbDefiNom9">Ghost</string>
    <string name="dbDefiNom10">Fin de semaine tranquille</string>
    <string name="dbDefiNom11">Ca va swinger !</string>
    <string name="dbDefiNom12">Le ridicule ne tue pas</string>
    <string name="dbDefiNom13">Conversation impromptue</string>
    <string name="dbDefiNom14">Vous êtes nostalgiques ?</string>
    <string name="dbDefiNom15">Leader charismatique</string>
    <string name="dbDefiNom16">Oserez-vous ?</string>
    <string name="dbDefiNom17">Politesse spontanée</string>
    <string name="dbDefiNom18">La La Land</string>
    <string name="dbDefiNom19">Cher journal</string>
    <string name="dbDefiNom20">Sociable</string>
    <string name="dbDefiNom21">Quittez ce monde !</string>
    <string name="dbDefiNom22">On se déconnecte !</string>
    <string name="dbDefiNom23">Mortels emballages</string>
    <string name="dbDefiNom24">Déplacements verts</string>
    <string name="dbDefiNom25">Mettez-vous à la page !</string>
    <string name="dbDefiNom26">Black Mirror off</string>
    <string name="dbDefiNom27">Manuel</string>
    <string name="dbDefiNom28">Marco ? Polo !</string>
    <string name="dbDefiNom29">Le minimum vital</string>
    <string name="dbDefiNom30">Dans 20, 30 ans y en aura plus</string>
    <string name="dbDefiNom31">Into the wild</string>
    <string name="dbDefiNom32">Fiction</string>
    <string name="dbDefiNom33">J\'ai mal à la tête</string>
    <string name="dbDefiNom34">On se détend</string>
    <string name="dbDefiNom35">Parfois, on ne sait pas</string>
    <string name="dbDefiNom36">On se bouge !</string>
    <string name="dbDefiNom37">Oreilles sensibles</string>
    <string name="dbDefiNom38">Suivez le guide !</string>
    <string name="dbDefiNom39">Ami des animaux</string>
    <string name="dbDefiNom40">Une intuition, vous dites ?</string>
    <string name="dbDefiNom41">Schtroumpf grognon</string>
    <string name="dbDefiNom42">Poli</string>
    <string name="dbDefiNom43">Sans rancune</string>
    <string name="dbDefiNom44">Objection !</string>
    <string name="dbDefiNom45">La nuit porte conseil</string>
    <string name="dbDefiNom46">Le Web c\'est facile !</string>
    <string name="dbDefiNom47">Débat</string>
    <string name="dbDefiNom48">Inventaire des relations</string>
    <string name="dbDefiNom49">Bouddha</string>
    <string name="dbDefiNom50">Fact checker</string>
    <string name="dbDefiNom51">L\'amitié c\'est important</string>
    <string name="dbDefiNom52">Le monde a besoin de vous !</string>
    <string name="dbDefiNom53">Souriez, vous êtes filmé !</string>
    <string name="dbDefiNom54">Inconnu sympathique</string>
    <string name="dbDefiNom55">C\'est l\'heure du partage</string>
    <string name="dbDefiNom56">Don</string>
    <string name="dbDefiNom57">Coopération</string>
    <string name="dbDefiNom58">Chacun son histoire</string>
    <string name="dbDefiNom59">Ne tournez plus autour du pot</string>
    <string name="dbDefiNom60">Vulnérable</string>
    <string name="dbDefiNom61">C\'est l\'heure du tri</string>
    <string name="dbDefiNom62">Trop c\'est trop !</string>
    <string name="dbDefiNom63">3, 2, 1, Go !</string>
    <string name="dbDefiNom64">Pour une fois !</string>
    <string name="dbDefiNom65">C\'est l\'heure du rangement !</string>
    <string name="dbDefiNom66">Ménage de printemps</string>
    <string name="dbDefiNom67">C\'est l\'heure du tri !</string>
    <string name="dbDefiNom68">Maître Shifu</string>
    <string name="dbDefiNom69">Plannification</string>
    <string name="dbDefiNom70">Comptable</string>
    <string name="dbDefiNom71">L\'aventure m\'appelle</string>
    <string name="dbDefiNom72">Du changement, ça fait du bien !</string>
    <string name="dbDefiNom73">Polyglotte</string>
    <string name="dbDefiNom74">Érudit</string>
    <string name="dbDefiNom75">On ose, on se met en avant !</string>
    <string name="dbDefiNom76">The Queen and the King</string>
    <string name="dbDefiNom77">Consumérisme</string>
    <string name="dbDefiNom78">Ca fait du bien !</string>
    <string name="dbDefiNom79">De bonnes affaires !</string>
    <string name="dbDefiNom80">L\'art de négocier</string>
    <string name="dbDefi1">L\'alcool c\'est fini pendant 7 jours.</string>
    <string name="dbDefi2">Ce soir, c\'est jeu de société en petit comité ! </string>
    <string name="dbDefi3">Passez du temps avec votre famille.</string>
    <string name="dbDefi4">Lisez un livre.</string>
    <string name="dbDefi5">Allez à la bibliothèque pendant 2h.</string>
    <string name="dbDefi6">Allez à l\'opéra, au théâtre ou au cinéma seul.</string>
    <string name="dbDefi7">Mangez seul au restaurant.</string>
    <string name="dbDefi8">Cette semaine, couchez à l\'écrit vos ressentis, vos doutes, vos envies.</string>
    <string name="dbDefi9">N\'envoyez aucun message électronique pendant 2 jours.</string>
    <string name="dbDefi10">Passez un week-end seul.</string>
    <string name="dbDefi11">Organisez une soirée chez vous.</string>
    <string name="dbDefi12">Promenez-vous dans la rue avec un accessoire atypique.</string>
    <string name="dbDefi13">Engagez une discussion avec un inconnnu pendant au moins 10 minutes.</string>
    <string name="dbDefi14">Appelez un ami d\'enfance.</string>
    <string name="dbDefi15">Au restaurant, entrez le premier, et appelez le serveur dès que votre table a besoin de quelque chose.</string>
    <string name="dbDefi16">Tapez-vous un fou rire seul en public.</string>
    <string name="dbDefi17">Sortez de chez vous et dites bonjour aux 5 premières personnes que vous croisez.</string>
    <string name="dbDefi18">Écoutez une de vos musiques favorites et dansez dans la rue.</string>
    <string name="dbDefi19">Publiez un message personnel sur votre réseau social favori.</string>
    <string name="dbDefi20">Dès que possible, passez du temps avec vos collègues, et ce pendant 3 jours.</string>
    <string name="dbDefi21">Ne vous renseignez plus sur l\'actualité pendant 7 jours.</string>
    <string name="dbDefi22">Coupez-vous des réseaux sociaux pendant 3 jours.</string>
</resources>