<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7FBFC"
    tools:context=".views.RecompenseActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="527dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="69dp"
        android:width="235dp"
        android:height="60dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.22"
        android:text="@string/recompense"
        android:textColor="#FF002D40"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/montserrat_bold"
        tools:lineHeight="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="137dp"
        android:width="280dp"
        android:height="80dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.23"
        android:text="@string/description_recompense"
        android:textColor="#FF36677C"
        android:textFontWeight="normal"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/montserrat" />

    <EditText
        android:id="@+id/editTextRecompense"
        android:layout_width="346dp"
        android:layout_height="85dp"
        android:layout_marginBottom="367dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:width="280dp"
        android:height="20dp"
        android:ems="10"
        android:hint="@string/editext_recompense"
        android:inputType="textShortMessage"
        android:imeOptions="actionGo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:layout_marginEnd="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="253dp"
        android:text="@string/bouton_suivant"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/boutonbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecompense" />

</android.support.constraint.ConstraintLayout>