<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7FBFC"
    tools:context=".views.InscriptionActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:width="280dp"
        android:height="162dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.25"
        android:text="@string/bienvenue"
        android:textFontWeight="normal"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/montserrat"
        tools:lineHeight="15sp"
        tools:textColor="#FF36677C" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="275dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:width="280dp"
        android:height="20dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        android:imeOptions="actionGo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textColor="#FF002D40"
        tools:textSize="13sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:layout_marginEnd="259dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="259dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="390dp"
        android:width="61dp"
        android:height="22dp"
        android:lineSpacingMultiplier="1.22"
        android:text="@string/avatar"
        android:textColor="#FF002D40"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/montserrat" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/circleImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="157dp"
        android:foregroundGravity="center"
        android:src="@drawable/profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="@string/bouton"
        android:background="@drawable/boutonbg"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textFontWeight="600"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:srcCompat="@drawable/ic_edit" />


</android.support.constraint.ConstraintLayout>